@@ -7,7 +7,7 @@ module Fairy
 
 ##CONF.RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby" 
 
-  CONF["emperor2"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-dev" 
+  CONF["emperor2"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-1.9.1" 
   CONF["gentoo"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-1.9.1"
   CONF["giant"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-1.9.1"
   CONF["emperor2v1"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-1.9.1" 
@@ -64,8 +64,8 @@ CONF.CONTROLLER_MAX_ACTIVE_NTASKS_IN_PROCESSOR = 4
 #  CONF.POSTQUEUING_POLICY = {:queuing_class => :PoolQueue}
 #  CONF.POSTQUEUING_POLICY = {:queuing_class => :ChunkedPoolQueue}
 #  CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemorySizedPoolQueue}
-  CONF.POSTQUEUING_POLICY = {:queuing_class => :FileBufferdQueue}
-#  CONF.POSTQUEUING_POLICY = {:queuing_class => :ChunkedFileBufferdQueue}
+#  CONF.POSTQUEUING_POLICY = {:queuing_class => :FileBufferdQueue}
+  CONF.POSTQUEUING_POLICY = {:queuing_class => :ChunkedFileBufferdQueue}
 
 ##CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 10000
   CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 100000
